ola-parser/src/testdata/syntaxTests/array/length/parameter_too_large.sol
contract C {
  fn f(bytes32[1263941234127518272] memory) public pure {}
}
// ----
// TypeError 1534: (26-61): Type too large for memory.
